# editdistpy

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/actions/build_editdistpy/: action.yml
.github/workflows/: publish.yml  tests.yml  wheels.yml
editdistpy/: __init__.py  _damerau_osa.cpp  _damerau_osa.h  _damerau_osa.hpp  _def.h  _helpers.cpp  _helpers.h  _helpers.hpp  _levenshtein.cpp  _levenshtein.h  _levenshtein.hpp  damerau_osa.c  damerau_osa.cpp  damerau_osa.pxd  damerau_osa.pyi  damerau_osa.pyx  def.hpp  levenshtein.c  levenshtein.cpp  levenshtein.pyi  levenshtein.pyx
tests/: benchmarks.py  conftest.py  test_damerau_osa.py  test_levenshtein.py
tests/fortests/: helpers.py
