[metadata]
name = editdistpy
version = 0.0.0.dev1
description = Fast Levenshtein and Damerau optimal string alignment algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
author = mmb L
url = https://github.com/mammothb/editdistpy
project_urls =
	Documentation = https://github.com/mammothb/editdistpy
	Changelog = https://github.com/mammothb/editdistpy/blob/master/CHANGELOG.md
license = MIT
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: MIT License
    Intended Audience :: Developers
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.6
package_dir = =editdistpy
packages = find:

[options.packages.find]
where = editdistpy

[options.package_data]
* = *.pxd, *.h